# haxtatic

./: @haxdox.bat  LICENSE  README.md  blogs.hs  config.hs  haxdox.bat  haxtatic.cabal  html.hs  main.hs  pages.hs  posts.hs  readme.md  stack.yaml  util.hs  xconsts.hs  ximage.hs  xlinks.hs  xlisting.hs  xpagetoc.hs  xrandom.hs  xsnippets.hs
__tmp_nu_/: @HaXtatic.hs  @HaxMain.hs  @haxdox.bat  App.hs  Base.hs  Bloks.hs  Build.hs  Defaults.hs  Files.hs  Html.hs  Pages.hs  Posts.hs  Proj.hs  ProjC.hs  ProjCfg.hs  ProjDefaults.hs  ProjT.hs  ProjTxts.hs  Tmpl.hs  Util.hs  X.hs  XdemoCfgArgs.hs  XdemoSimplest.hs  XhelloWorld.hs  Ximage.hs  Xlinks.hs  XminiTag.hs  XpageAnchors.hs  Xrepeat.hs  Xsnippet.hs
__tmp_nu_/dox-demo/: default.haxproj
__tmp_nu_/misc/: doxdemo.haxproj  metaleap.tmTheme  notes.hs  tmp  (+1 more)
__tmp_nu_ver/: @HaXtatic.hs  Bloks.hs  Files.hs  Proj.hs  ProjDefaults.hs  Util.hs
_misc/: haxdox.bat  haxdox.sublime-build  metaleap.tmTheme  notes.hs  test.html
docs/: basics.html  basics.intro.html  haxtatic.css  index.html  metaleap.css  metaleap.js  ml-album-dyn.js  ml-life.css  robots.txt  sitemap.xml  tags.b.html  tags.html  tags.p.html  tags.t.html  tags.x.html
dox-demo/: default.haxproj
haxdox/: blog.tmpl.html  haxdox.bat  haxtatic.config  theme.tmpl.html
src/: @HaxMain.hs  @Main.hs  App.hs  Base.hs  Bloks.hs  Build.hs  Defaults.hs  Files.hs  Html.hs  Pages.hs  Posts.hs  Proj.hs  ProjC.hs  ProjT.hs  Tmpl.hs  Util.hs  X.hs  _xconsts.old.hs  blogs.hs  config.hs  html.hs  main.hs  maindefaults.hs  pages.hs  posts.hs  tmp.txt  util.hs  ximage.hs  xlinks.hs  xlisting.hs  xmarkup.hs  xpagetoc.hs  xrandom.hs  xrepeater.hs  xsnippets.hs
src-docs/: haxtatic.config  theme.tmpl.html
(+243 files in other folders)
