name:                haxtatic
version:             1.0.0.0
homepage:            http://github.com/metaleap/haxtatic
license:             GPL
license-file:        LICENSE
author:              metaleap
maintainer:          phjl@mailbox.org
copyright:           Phil Schumann
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haxtatic
  hs-source-dirs:      src
  main-is:             @HaxMain.hs
  default-language:    Haskell2010
  build-depends:       base, time, containers, filepath, directory
